tests/rosetta/out/Dart/archimedean-spiral.error
run error: exit status 254
../../tests/rosetta/out/Dart/archimedean-spiral.dart:9:57: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
    var denom = double.parse((((2 * (n as num)) as num) * (((2 * (n as num) as num) + 1) as num)));
                                                        ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:11:24: Error: A value of type 'num' can't be assigned to a variable of type 'double'.
    sum = (sum as num) + (term as num);
                       ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:12:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    n = (n as num) + 1;
                   ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:22:70: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
    var denom = double.parse(((((2 * (n as num) as num) - 1) as num) * ((2 * (n as num)) as num)));
                                                                     ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:23:62: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
    term = (((-(term as num) as num) * x as num) * x as num) / (denom as num);
                                                             ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:24:24: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    sum = (sum as num) + (term as num);
                       ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:25:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    n = (n as num) + 1;
                   ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:27:10: Error: A value of type 'int' can't be returned from a function with return type 'double'.
  return sum;
         ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:51:36: Error: The argument type 'int' can't be assigned to the parameter type 'double'.
    var x = (r as num) * cosApprox(theta);
                                   ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:52:36: Error: The argument type 'int' can't be assigned to the parameter type 'double'.
    var y = (r as num) * sinApprox(theta);
                                   ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:54:33: Error: A value of type 'String' can't be assigned to a variable of type 'num'.
      print(centre + (x as num).toString() + ',' + centre - (y as num).toString());
                                ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:54:46: Error: A value of type 'String' can't be assigned to a variable of type 'num'.
      print(centre + (x as num).toString() + ',' + centre - (y as num).toString());
                                             ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:54:72: Error: A value of type 'String' can't be assigned to a variable of type 'num'.
      print(centre + (x as num).toString() + ',' + centre - (y as num).toString());
                                                                       ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:56:19: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
    theta = theta + degreesIncr;
                  ^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:82:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:111:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:116:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/archimedean-spiral.dart:120:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
